@@ -404,7 +404,7 @@ public class StructurePanel implements Serializable {
     public TreeNode<Object> getSelectedPhysicalNodeIfSingle() {
         List<TreeNode<Object>> nodes = getSelectedPhysicalNodes();
         if (Objects.nonNull(nodes) && nodes.size() == 1) {
-            return nodes.get(0);
+            return nodes.getFirst();
         }
         return null;
     }
@@ -546,7 +546,7 @@ public class StructurePanel implements Serializable {
 
     private void preservePhysical() {
         if (!physicalTree.getChildren().isEmpty()) {
-            preservePhysicalRecursive(physicalTree.getChildren().get(0));
+            preservePhysicalRecursive(physicalTree.getChildren().getFirst());
             dataEditor.checkForChanges();
         }
     }
@@ -1768,7 +1768,7 @@ public class StructurePanel implements Serializable {
 
     private HashMap<LogicalDivision, Boolean> getLogicalTreeNodeExpansionStates(DefaultTreeNode<Object> tree) {
         if (Objects.nonNull(tree) && tree.getChildCount() == 1) {
-            TreeNode<Object> treeRoot = tree.getChildren().get(0);
+            TreeNode<Object> treeRoot = tree.getChildren().getFirst();
             LogicalDivision structuralElement = getTreeNodeStructuralElement(treeRoot);
             if (Objects.nonNull(structuralElement)) {
                 return getLogicalTreeNodeExpansionStatesRecursively(treeRoot, new HashMap<>());
@@ -1793,7 +1793,7 @@ public class StructurePanel implements Serializable {
 
     private HashMap<PhysicalDivision, Boolean> getPhysicalTreeNodeExpansionStates(DefaultTreeNode<Object> tree) {
         if (Objects.nonNull(tree) && tree.getChildCount() == 1) {
-            TreeNode<Object> treeRoot = tree.getChildren().get(0);
+            TreeNode<Object> treeRoot = tree.getChildren().getFirst();
             PhysicalDivision physicalDivision = getTreeNodePhysicalDivision(treeRoot);
             if (Objects.nonNull(physicalDivision)) {
                 return getPhysicalTreeNodeExpansionStatesRecursively(treeRoot, new HashMap<>());
@@ -2016,7 +2016,7 @@ public class StructurePanel implements Serializable {
 
                 // check sibling has children (with first child being another logical node)
                 while (!nextLogical.getChildren().isEmpty()) {
-                    TreeNode<Object> firstChild = nextLogical.getChildren().get(0);
+                    TreeNode<Object> firstChild = nextLogical.getChildren().getFirst();
                     if (Objects.isNull(getTreeNodeStructuralElement(firstChild))) {
                         // first child is not a logical node
                         return nextLogical;
@@ -2061,7 +2061,7 @@ public class StructurePanel implements Serializable {
         if (Objects.nonNull(nextLogical)) {
             // check whether first child is already view of current node (to avoid adding views multiple times)
             if (!nextLogical.getChildren().isEmpty()) {
-                TreeNode<Object> childNode = nextLogical.getChildren().get(0);
+                TreeNode<Object> childNode = nextLogical.getChildren().getFirst();
                 View childNodeView = getTreeNodeView(childNode);
                 View selectedView = getTreeNodeView(treeNode);
                 if (Objects.nonNull(childNodeView) && Objects.nonNull(selectedView)) {
